--- a/src/main/resources/static/Style/styleMinhasPropostas.css
+++ b/src/main/resources/static/Style/styleMinhasPropostas.css
@@ -146,6 +146,7 @@ h1.h3.mb-0 {
 
 .acoes .recusar {
     background: #fd7e14;
+    color: black !important;
 }
 
 .acoes .recusar:hover {
@@ -157,7 +158,7 @@ h1.h3.mb-0 {
     border-radius: 50rem;
     font-weight: 600;
     font-size: .8rem;
-    color: #fff;
+    color: #000000;
 }
 
 .badge-pendente {
@@ -220,8 +221,8 @@ h1.h3.mb-0 {
     color: #aaa;
 }
 button.chat {
-    background-color: #ffd622; 
-    color: white;
+     background-color: #ffc107;
+    color: rgb(0, 0, 0);
     border: none;
     padding: 8px 12px;
     border-radius: 6px;
@@ -252,7 +253,7 @@ button.chat:hover {
 
 button.avaliar {
   background-color: #ffc107;
-  color: #333;
+  color: #000000;
   border: none;
   border-radius: 8px;
   padding: 8px 14px;
@@ -317,7 +318,9 @@ button.avaliar:hover {
   color: #6c757d;
   cursor: not-allowed;
 }
-
+.aceitar {
+  color: black !important;
+}
 
 @media (max-width: 768px) {
     .row-proposta {
