Commit da Etapa 06 - Adição de comentários no código
 Branch Etapa 06

--- a/src/main/resources/static/Style/chat.css
+++ b/src/main/resources/static/Style/chat.css
@@ -104,7 +104,13 @@ main#chatArea {
     gap: 14px;
     overflow-y: auto;
     scroll-behavior: smooth;
+    height: 60vh;           
+    max-height: 500px;        
+    min-height: 500px;        
+    border-top: 2px solid #ffe082;
+    border-bottom: 2px solid #ffe082;
 }
+
 
 #chatArea::-webkit-scrollbar {
     width: 10px;
